[css-grid] Treat 'auto' as 0px when compute non-laid out item's margins

We must treat any 'auto' margin as 0px during the tracks sizing
algorithm, as the CSS Grid spec states:

- https://drafts.csswg.org/css-grid/#auto-margins

Additionally, we have an utility function to compute the grid item's
margins when the item still needs to layout. We used the function
CommputedStyle::hasMarings to decide whether such margin computation
worths. However, we need that function to operate on a specific
axis, hence I added a new function adding such logic.

Bug: 788471
Change-Id: I5d4e4fc435aa1ffea0003a9a88cfd7a3c1bca114
Reviewed-on: https://chromium-review.googlesource.com/789830
Commit-Queue: Javier Fernandez <jfernandez@igalia.com>
Reviewed-by: Manuel Rego Casasnovas <rego@igalia.com>
Cr-Commit-Position: refs/heads/master@{#519673}
Former-commit-id: 534ecb7b67e43f206cf8ad645ff8d69286261db0